Updated Sponsor Packet modal, and small verbiage changes

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             <h5 class="powerpacked">Power Packed</h5>
             <h6>Prepare for a knowledge bomb</h6>
             <p class="medium">
-              Talks will be short and focused; each between 20 &amp; 40 minutes long. Each speaker will have full knowledge of those that present before them, and will build off the concepts conveyed by previous speakers.
+              Talks will be short and focused; each between 30 &amp; 55 minutes long. Each speaker will have full knowledge of those that present before them, and will build off the concepts conveyed by previous speakers.
             </p>
           </div>
         </div>
@@ -157,7 +157,7 @@
             <h5 class="crosstrain">Cross Train</h5>
             <h6>Twice the speakers for your buck.</h6>
             <p class="medium">
-              The wide range of topics selected for Level Up are purposefully varied in subject, but share a the common theme; each are practical and immediately applicable to your everyday work.
+              The wide range of topics selected for Level Up are purposefully varied in subject, but share a common theme; each are practical and immediately applicable to your everyday work.
             </p>
           </div>
           <div class="large-4 medium-4 columns infoblock">
@@ -172,8 +172,8 @@
             <h6>Spend a few days at the springs</h6>
             <p class="medium">
               Enjoy the beautiful historic resort town of Saratoga during the peak of
-               <a href='https://www.google.com/search?q=new+york+fall+leaves&espv=210&es_sm=119&source=lnms&tbm=isch&sa=X&ei=C0_ZUrO_DPe0sATAzoDQAw&ved=0CAcQ_AUoAQ&biw=1920&bih=1008'>New York's Fall Season</a>. (And if you enjoy the outdoors,
-              you're only 30 minutes from the <a href='http://visitadirondacks.com/'>largest park</a> in the continental United States.)
+               <a href='https://www.google.com/search?q=new+york+fall+leaves&espv=210&es_sm=119&source=lnms&tbm=isch&sa=X&ei=C0_ZUrO_DPe0sATAzoDQAw&ved=0CAcQ_AUoAQ&biw=1920&bih=1008'>New York's Fall Season</a> (and if you enjoy the outdoors,
+              you're only 30 minutes from the <a href='http://visitadirondacks.com/'>largest park</a> in the continental U.S.).
             </p>
           </div>
         </div>
@@ -210,9 +210,36 @@
             <div class="large-4 medium-4 columns">
               <div class="row">
                 <a href="#" data-reveal-id="firstModal" class="large button signup">Keep Me Updated</a>
-              </div>
-              <div class="row">
-                <a href="#" class="large button signup left alt">Sponsor Packet</a>
+                <a href="#" data-reveal-id="secondModal" class="large button signup left alt">Sponsor Packet</a>
+                  <div id="secondModal" class="reveal-modal small" data-reveal>
+                    <h3><strong>Sponsor Packet</strong></h3>
+                    <br>
+                    <p>A sponsor packet for <strong>Level Up</strong> is currently in the works. In the meantime, sign up to let us know that you're interested - when we finalize the details, you'll be the first we contact.</p>
+                    <!-- <p>If you're interested in being a Speaker, you can <a>Apply Here.</a> -->
+
+
+                    <!-- ADD IN WHEN SPONSOR PACKET IS DESIGNED
+
+                    <br>If you're interested in Sponsoring, <a>Download a Sponsor Kit.</a></p> -->
+
+
+                    <form method="post" action="https://madglory.wufoo.com/forms/r1tmn6tm0sgrkom/#public">
+                      <input type="hidden" name="idstamp" id="idstamp" value="UBky4Yeg6JSt/YG4/zJz51sZD5sSAtyGr3+dw6IRBZo=" />
+
+                      <div class="row">
+
+                        <!-- Do not change the name="BLAH" attributes, they are used by WuFoo -->
+
+                        <input type="text" name="Field16" placeholder="Company Name" class="large" />
+                        <input type="text" name="Field3" placeholder="Company Website" class="large" />
+                        <input type="text" name="Field12" placeholder="Your Name*" class="large" />
+                        <input type="text" name="Field4" placeholder="Your Email*" class="large" />
+                        <button type="submit" class="large button signup alt">Submit</button>
+                      </div>
+                    </form>
+                    <a class="close-reveal-modal">&#215;</a>
+                  </div>
+
                 <!-- <a href="#" class="tiny button signup right alt">Apply to Speak</a> -->
               </div>
             </div>
