Fixed Sponsor Packet Sign Up

--- a/index.html
+++ b/index.html
@@ -223,17 +223,17 @@
                     <br>If you're interested in Sponsoring, <a>Download a Sponsor Kit.</a></p> -->
 
 
-                    <form method="post" action="https://madglory.wufoo.com/forms/r1tmn6tm0sgrkom/#public">
+                    <form method="post" action="https://madglory.wufoo.com/forms/q1t10j891mumdsw/#public">
                       <input type="hidden" name="idstamp" id="idstamp" value="UBky4Yeg6JSt/YG4/zJz51sZD5sSAtyGr3+dw6IRBZo=" />
 
                       <div class="row">
 
                         <!-- Do not change the name="BLAH" attributes, they are used by WuFoo -->
 
-                        <input type="text" name="Field16" placeholder="Company Name" class="large" />
-                        <input type="text" name="Field3" placeholder="Company Website" class="large" />
-                        <input type="text" name="Field12" placeholder="Your Name*" class="large" />
-                        <input type="text" name="Field4" placeholder="Your Email*" class="large" />
+                        <input type="text" name="Field16" placeholder="Your Name*" class="large" />
+                        <input type="text" name="Field3" placeholder="Your Email*" class="large" />
+                        <input type="text" name="Field12" placeholder="Company Name" class="large" />
+                        <input type="text" name="Field4" placeholder="Website" class="large" />
                         <button type="submit" class="large button signup alt">Submit</button>
                       </div>
                     </form>
