--- a/index.html
+++ b/index.html
@@ -61,7 +61,6 @@
             <h5 class="indent">In Association with <a href="http://www.madglory.com">MadGlory</a></h5>
 
             <div class="row">
-
               <div class="large-3 columns details">October 8 &amp; 9, 2014</div>
               <div class="large-3 large-push-6 columns details">Saratoga Springs, NY</div>
               <div class="large-4 large-pull-4 columns">
@@ -69,7 +68,7 @@
               <!-- Sign up modal form -->
 
               <a href="#" data-reveal-id="firstModal" class="large button signup">Keep Me Updated</a>
-              <div id="firstModal" class="reveal-modal small" data-reveal>
+              <div id="firstModal" class="reveal-modal medium" data-reveal>
                 <h3><strong>The early bird gets the worm.</strong></h3>
                 <br>
                 <p><strong>Level Up</strong> will be open for registration soon. In the meantime, sign up to stay updated – that way, you'll be the first to know when registration opens.</p>
@@ -182,7 +181,7 @@
       <div class="row">
         <div class="large-12 columns info">
           <div class="row ">
-            <div class="large-4 medium-4 columns dates">
+            <div class="large-4 medium-5 columns dates">
               <a
                 href="http://ate.so/?Qk3QeHA"
                 title="Add to Calendar"
@@ -204,14 +203,12 @@
                 </div>
               </a>
             </div>
-            <div class="large-4 medium-4 columns">
 
-            </div>
-            <div class="large-4 medium-4 columns">
+            <div class="large-4 medium-5 columns">
               <div class="row">
                 <a href="#" data-reveal-id="firstModal" class="large button signup">Keep Me Updated</a>
                 <a href="#" data-reveal-id="secondModal" class="large button signup left alt">Sponsor Packet</a>
-                  <div id="secondModal" class="reveal-modal small" data-reveal>
+                  <div id="secondModal" class="reveal-modal medium" data-reveal>
                     <h3><strong>Sponsor Packet</strong></h3>
                     <br>
                     <p>A sponsor packet for <strong>Level Up</strong> is currently in the works. In the meantime, sign up to let us know that you're interested - when we finalize the details, you'll be the first we contact.</p>
@@ -223,17 +220,18 @@
                     <br>If you're interested in Sponsoring, <a>Download a Sponsor Kit.</a></p> -->
 
 
-                    <form method="post" action="https://madglory.wufoo.com/forms/r1tmn6tm0sgrkom/#public">
-                      <input type="hidden" name="idstamp" id="idstamp" value="UBky4Yeg6JSt/YG4/zJz51sZD5sSAtyGr3+dw6IRBZo=" />
+                    <form method="post" action="https://madglory.wufoo.com/forms/r1tmn6tm0sgrkom/">
+                      <input type="hidden" name="idstamp" id="idstamp" value="HZacEuhoy8vQGEeKm3U+gOB1zyiX4GcLu51tIrDCGBc=" />
 
                       <div class="row">
 
                         <!-- Do not change the name="BLAH" attributes, they are used by WuFoo -->
-
-                        <input type="text" name="Field16" placeholder="Company Name" class="large" />
-                        <input type="text" name="Field3" placeholder="Company Website" class="large" />
+                        
                         <input type="text" name="Field12" placeholder="Your Name*" class="large" />
                         <input type="text" name="Field4" placeholder="Your Email*" class="large" />
+                        <input type="text" name="Field16" placeholder="Company Name" class="large" />
+                        <input type="text" name="Field3" placeholder="Company Website" class="large" />
+                        
                         <button type="submit" class="large button signup alt">Submit</button>
                       </div>
                     </form>
