revert modal to small

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
               <!-- Sign up modal form -->
 
               <a href="#" data-reveal-id="firstModal" class="large button signup">Keep Me Updated</a>
-              <div id="firstModal" class="reveal-modal medium" data-reveal>
+              <div id="firstModal" class="reveal-modal small" data-reveal>
                 <h3><strong>The early bird gets the worm.</strong></h3>
                 <br>
                 <p><strong>Level Up</strong> will be open for registration soon. In the meantime, sign up to stay updated – that way, you'll be the first to know when registration opens.</p>
@@ -208,7 +208,7 @@
               <div class="row">
                 <a href="#" data-reveal-id="firstModal" class="large button signup">Keep Me Updated</a>
                 <a href="#" data-reveal-id="secondModal" class="large button signup left alt">Sponsor Packet</a>
-                  <div id="secondModal" class="reveal-modal medium" data-reveal>
+                  <div id="secondModal" class="reveal-modal small" data-reveal>
                     <h3><strong>Sponsor Packet</strong></h3>
                     <br>
                     <p>A sponsor packet for <strong>Level Up</strong> is currently in the works. In the meantime, sign up to let us know that you're interested - when we finalize the details, you'll be the first we contact.</p>
