Twitter link and padding

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div class="full-width feed">
       <div class="row">
         <div class="small-12 columns">
-          <a href="http://twitter.com/madglory" target="_blank" class="twitter">
+          <a href="http://twitter.com/levelupcon" target="_blank" class="twitter">
             <img src="img/twitter-icon.png" class="">
           </a>
           <h6 class="status">Follow <a href="http://twitter.com/levelupcon">@levelupcon</a> on Twitter.</h6>
