Code of conduct

--- a/index.html
+++ b/index.html
@@ -264,7 +264,8 @@
     <div class="full-width subfooter">
       <div class="row">
         <div class="large-12 columns">
-          <p><medium>Level Up Conference in association with <a href="http://madglory.com" target="_blank">MadGlory</a></medium></p>
+          <p><medium>Level Up Conference in association with <a href="http://madglory.com" target="_blank">MadGlory</a></medium>  |  <a href="http://confcodeofconduct.com">Code of Conduct</a></p>
+          
         </div>
       </div>
     </div>
