--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="en">
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -39,7 +39,7 @@
       <div class="row">
         <div class="small-12 columns">
           <a href="http://twitter.com/levelupcon" target="_blank" class="twitter">
-            <img src="img/twitter-icon.png" class="">
+            <img src="img/twitter-icon.png" alt="Twitter Icon">
           </a>
           <h6 class="status">Follow <a href="http://twitter.com/levelupcon">@levelupcon</a> on Twitter.</h6>
         </div>
@@ -55,8 +55,8 @@
 
             <!-- Responsive retina image media queries -->
 
-            <img src="img/logo-lg.png" data-interchange="[img/logo-lg.png, (default)], [img/logo-lg@2x.png, (retina)]" class="logo" >
-            <noscript><img src="img/logo-lg.png"></noscript>
+            <img src="img/logo-lg.png" alt="LevelUp Logo" data-interchange="[img/logo-lg.png, (default)], [img/logo-lg@2x.png, (retina)]" class="logo" >
+            <noscript><img src="img/logo-lg.png" alt="LevelUp Logo"></noscript>
             <h4 class="indent">Creative Tech Conference 2014</h4>
             <h5 class="indent">In Association with <a href="http://www.madglory.com">MadGlory</a></h5>
 
@@ -64,39 +64,8 @@
               <div class="large-3 columns details">October 8 &amp; 9, 2014</div>
               <div class="large-3 large-push-6 columns details">Saratoga Springs, NY</div>
               <div class="large-4 large-pull-4 columns">
-
-              <!-- Sign up modal form -->
-
-              <a href="#" data-reveal-id="firstModal" class="large button signup">Keep Me Updated</a>
-              <div id="firstModal" class="reveal-modal small" data-reveal>
-                <h3><strong>The early bird gets the worm.</strong></h3>
-                <br>
-                <p><strong>Level Up</strong> will be open for registration soon. In the meantime, sign up to stay updated – that way, you'll be the first to know when registration opens.</p>
-                <!-- <p>If you're interested in being a Speaker, you can <a>Apply Here.</a> -->
-
-
-                <!-- ADD IN WHEN SPONSOR PACKET IS DESIGNED
-
-                <br>If you're interested in Sponsoring, <a>Download a Sponsor Kit.</a></p> -->
-
-
-                <form method="post" action="https://madglory.wufoo.com/forms/zmhocgb1i2iamc/#public">
-                  <input type="hidden" name="idstamp" id="idstamp" value="UBky4Yeg6JSt/YG4/zJz51sZD5sSAtyGr3+dw6IRBZo=" />
-
-                  <div class="row">
-
-                    <!-- Do not change the name="BLAH" attributes, they are used by WuFoo -->
-
-                    <input type="text" name="Field12" placeholder="Full Name*" class="large" />
-                    <input type="text" name="Field3" placeholder="Company Website" class="large" />
-                    <input type="text" name="Field4" placeholder="Email*" class="large" />
-                    <button type="submit" class="large button signup">Submit</button>
-                  </div>
-                </form>
-                <a class="close-reveal-modal">&#215;</a>
+                <a href="#" data-reveal-id="firstModal" class="large button signup">Keep Me Updated</a>
               </div>
-
-              <!-- End Modal Form --></div>
             </div>
 
       	  </div>
@@ -104,19 +73,19 @@
       </div>
     </div>
 
-
-
     <div class="full-width intro">
       <div class="down-arrow">
-        <img src="img/down-arrow.png" />
+        <img src="img/down-arrow.png" alt="Down Arrow"/>
       </div>
       <div class="row">
         <div class="large-12 columns callout">
           <p class="lead">
-            Level Up is a creative tech conference held in the beautiful autumn season of upstate New York. At the conference, you'll explore the latest trends in web design &amp; development with a focus
-            on topics that are practical and immediately valuable to
-            your everyday work.<!-- You'll meet interesting people, make new friends,
-            and learn new skills you can show off at home. -->
+            Level Up is a creative tech conference where you'll explore the
+            process of creating and shipping software products online.  The conference
+            will feature practical experience by industry experts over two days
+            and cover four themes; ideate, design, build, and launch.  You'll
+            meet interesting people, make new friends, and learn new skills you
+            can show off at home.
           </p>
           <p class="lead"><strong>Tickets are extremely limited.</strong></p>
           <!-- <p class="lead">
@@ -128,54 +97,54 @@
       </div>
     </div>
 
-        <div class="row">
-          <div class="large-4 medium-4 columns infoblock">
-            <h5 class="workshop">Topical Topics</h5>
-            <h6>Show &amp; tell: personalized</h6>
-            <p class="medium">
-              A wide range of topics will be explored including everything from server side javascript, to cutting edge trends in design. Plenty of time will be allotted after each talk for questions and discussion.
-            </p>
-          </div>
-          <div class="large-4 medium-4 columns infoblock">
-            <h5 class="experience">An Intimate Experience</h5>
-            <h6>Guaranteed to meet new people</h6>
-            <p class="medium">
-              Top down we've designed Level Up to be an inspirational experience. The venue is walking distance from both the hotel and a vibrant downtown district where you can eat, shop, or grab a beer at any one of several dozen local pubs.
-            </p>
-          </div>
-          <div class="large-4 medium-4 columns infoblock">
-            <h5 class="powerpacked">Power Packed</h5>
-            <h6>Prepare for a knowledge bomb</h6>
-            <p class="medium">
-              Talks will be short and focused; each between 30 &amp; 55 minutes long. Each speaker will have full knowledge of those that present before them, and will build off the concepts conveyed by previous speakers.
-            </p>
-          </div>
-        </div>
-        <div class="row">
-          <div class="large-4 medium-4 columns infoblock">
-            <h5 class="crosstrain">Cross Train</h5>
-            <h6>Twice the speakers for your buck.</h6>
-            <p class="medium">
-              The wide range of topics selected for Level Up are purposefully varied in subject, but share a common theme; each are practical and immediately applicable to your everyday work.
-            </p>
-          </div>
-          <div class="large-4 medium-4 columns infoblock">
-            <h5 class="food">Good Eats</h5>
-            <h6>Savor the Saratoga flavor</h6>
-            <p class="medium">
-              It's a fact: an engaged mind can burn a lot of calories. Local foodies will prepare lunch and snacks each day to ensure you’re properly satiated (and hydrated!).
-            </p>
-          </div>
-          <div class="large-4 medium-4 column infoblock">
-            <h5 class="location">Beauty Abounds</h5>
-            <h6>Spend a few days at the springs</h6>
-            <p class="medium">
-              Enjoy the beautiful historic resort town of Saratoga during the peak of
-               <a href='https://www.google.com/search?q=new+york+fall+leaves&espv=210&es_sm=119&source=lnms&tbm=isch&sa=X&ei=C0_ZUrO_DPe0sATAzoDQAw&ved=0CAcQ_AUoAQ&biw=1920&bih=1008'>New York's Fall Season</a> (and if you enjoy the outdoors,
-              you're only 30 minutes from the <a href='http://visitadirondacks.com/'>largest park</a> in the continental U.S.).
-            </p>
-          </div>
-        </div>
+    <div class="row">
+      <div class="large-4 medium-4 columns infoblock">
+        <h5 class="workshop">Topical Topics</h5>
+        <h6>Show &amp; tell: personalized</h6>
+        <p class="medium">
+          A wide range of topics will be explored including everything from server side javascript, to cutting edge trends in design. Plenty of time will be allotted after each talk for questions and discussion.
+        </p>
+      </div>
+      <div class="large-4 medium-4 columns infoblock">
+        <h5 class="experience">An Intimate Experience</h5>
+        <h6>Guaranteed to meet new people</h6>
+        <p class="medium">
+          Top down we've designed Level Up to be an inspirational experience. The venue is walking distance from both the hotel and a vibrant downtown district where you can eat, shop, or grab a beer at any one of several dozen local pubs.
+        </p>
+      </div>
+      <div class="large-4 medium-4 columns infoblock">
+        <h5 class="powerpacked">Power Packed</h5>
+        <h6>Prepare for a knowledge bomb</h6>
+        <p class="medium">
+          Talks will be short and focused; each between 30 &amp; 55 minutes long. Each speaker will have full knowledge of those that present before them, and will build off the concepts conveyed by previous speakers.
+        </p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="large-4 medium-4 columns infoblock">
+        <h5 class="crosstrain">Cross Train</h5>
+        <h6>Twice the speakers for your buck.</h6>
+        <p class="medium">
+          The wide range of topics selected for Level Up are purposefully varied in subject, but share a common theme; each are practical and immediately applicable to your everyday work.
+        </p>
+      </div>
+      <div class="large-4 medium-4 columns infoblock">
+        <h5 class="food">Good Eats</h5>
+        <h6>Savor the Saratoga flavor</h6>
+        <p class="medium">
+          It's a fact: an engaged mind can burn a lot of calories. Local foodies will prepare lunch and snacks each day to ensure you’re properly satiated (and hydrated!).
+        </p>
+      </div>
+      <div class="large-4 medium-4 column infoblock">
+        <h5 class="location">Beauty Abounds</h5>
+        <h6>Spend a few days at the springs</h6>
+        <p class="medium">
+          Enjoy the beautiful historic resort town of Saratoga during the peak of
+           <a href='https://www.google.com/search?q=new+york+fall+leaves&amp;espv=210&amp;es_sm=119&amp;source=lnms&amp;tbm=isch&amp;sa=X&amp;ei=C0_ZUrO_DPe0sATAzoDQAw&amp;ved=0CAcQ_AUoAQ&amp;biw=1920&amp;bih=1008'>New York's Fall Season</a> (and if you enjoy the outdoors,
+          you're only 30 minutes from the <a href='http://visitadirondacks.com/'>largest park</a> in the continental U.S.).
+        </p>
+      </div>
+    </div>
 
     <div class="full-width signup">
       <div class="row">
@@ -236,7 +205,7 @@
                 </div>
 
                 <!-- <a href="#" class="tiny button signup right alt">Apply to Speak</a> -->
-              
+
 
             </div>
           </div>
@@ -255,7 +224,7 @@
     <div class="full-width footer">
       <div class="row">
         <div class="medium-3 medium-centered columns address">
-          <img src="img/pinpoint.png" class="pinpoint" />
+          <img src="img/pinpoint.png" class="pinpoint"  alt="Map Pin"/>
           <p><a href='http://goo.gl/maps/qz3vB'>Saratoga Springs, NY</a></p>
         </div>
       </div>
@@ -264,13 +233,43 @@
     <div class="full-width subfooter">
       <div class="row">
         <div class="large-12 columns">
-          <p><medium>Level Up Conference in association with <a href="http://madglory.com" target="_blank">MadGlory</a></medium>  |  <a href="http://confcodeofconduct.com">Code of Conduct</a></p>
-          
+          <p>Level Up Conference in association with <a href="http://madglory.com" target="_blank">MadGlory</a>  |  <a href="http://confcodeofconduct.com">Code of Conduct</a></p>
+
         </div>
       </div>
     </div>
 
-  </div>
+    <!-- Sign up modal form -->
+    <div id="firstModal" class="reveal-modal small" data-reveal>
+      <h3><strong>The early bird gets the worm.</strong></h3>
+      <br>
+      <p><strong>Level Up</strong> will be open for registration soon. In the meantime, sign up to stay
+        updated – that way, you'll be the first to know when registration opens.
+      </p>
+      <!-- <p>If you're interested in being a Speaker, you can <a>Apply Here.</a> -->
+
+
+      <!-- ADD IN WHEN SPONSOR PACKET IS DESIGNED
+
+      <br>If you're interested in Sponsoring, <a>Download a Sponsor Kit.</a></p> -->
+
+
+      <form method="post" action="https://madglory.wufoo.com/forms/zmhocgb1i2iamc/#public">
+        <input type="hidden" name="idstamp" id="idstamp" value="UBky4Yeg6JSt/YG4/zJz51sZD5sSAtyGr3+dw6IRBZo=" />
+
+        <div class="row">
+
+          <!-- Do not change the name="BLAH" attributes, they are used by WuFoo -->
+
+          <input type="text" name="Field12" placeholder="Full Name*" class="large" />
+          <input type="text" name="Field3" placeholder="Company Website" class="large" />
+          <input type="text" name="Field4" placeholder="Email*" class="large" />
+          <button type="submit" class="large button signup">Submit</button>
+        </div>
+      </form>
+      <a class="close-reveal-modal">&#215;</a>
+    </div>
+    <!-- /Sign up modal form -->
 
     <script src="js/jquery.js"></script>
     <script src="js/foundation.min.js"></script>
