--- a/index.html
+++ b/index.html
@@ -80,12 +80,12 @@
       <div class="row">
         <div class="large-12 columns callout">
           <p class="lead">
-            Level Up is a creative tech conference where you'll explore the
-            process of creating and shipping software products online.  The conference
-            will feature practical experience by industry experts over two days
-            and cover four themes; ideate, design, build, and launch.  You'll
-            meet interesting people, make new friends, and learn new skills you
-            can show off at home.
+            Level Up is a creative tech conference that explores the process of
+            creating and shipping modern software products. The conference will
+            feature practical experience by industry experts, over two days,
+            covering four themes; ideate, design, build, and launch.
+            Join us to meet interesting people, make new friends, and learn new
+            skills you can show off at home.
           </p>
           <p class="lead"><strong>Tickets are extremely limited.</strong></p>
           <!-- <p class="lead">
