Implemented the RFP form

--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@
             </div>
 
             <div class="large-4 medium-5 columns">
-              <a href="#" data-reveal-id="firstModal" class="large button signup">Keep Me Updated</a>
-              <a href="#" data-reveal-id="secondModal" class="large button signup left alt">Sponsor Packet</a>
+<!--               <a href="#" data-reveal-id="firstModal" class="large button signup">Keep Me Updated</a>
+ -->              <a href="#" data-reveal-id="secondModal" class="large button signup left alt">Sponsor Packet</a>
                 <div id="secondModal" class="reveal-modal small" data-reveal>
                   <h3><strong>Sponsor Packet</strong></h3>
                   <br>
@@ -205,8 +205,64 @@
                 </div>
 
                 <!-- <a href="#" class="tiny button signup right alt">Apply to Speak</a> -->
+              <a href="#" data-reveal-id="thirdModal" class="large button signup left alt">Speaker RFP</a>
+                <div id="thirdModal" class="reveal-modal small" data-reveal>
+                  <h3><strong>Request for Proposal</strong></h3>
+                  <br>
+                  <p><strong>Level Up</strong> is searching for candidates who have experience with creating and shipping modern software products within our four themes; ideate, design, build, and launch. </p>
+                  <hr>
+                  <!-- <p>If you're interested in being a Speaker, you can <a>Apply Here.</a> -->
 
 
+                  <!-- ADD IN WHEN SPONSOR PACKET IS DESIGNED
+                  <br>If you're interested in Sponsoring, <a>Download a Sponsor Kit.</a></p> -->
+
+
+                  <form method="post" action="https://madglory.wufoo.com/forms/s49mtcn12bkjrh/">
+                    <input type="hidden" name="idstamp" id="idstamp" value="HZacEuhoy8vQGEeKm3U+gOB1zyiX4GcLu51tIrDCGBc=" />
+
+                    <div class="row">
+
+                      <!-- Do not change the name="BLAH" attributes, they are used by WuFoo -->
+
+                      <input type="text" name="Field3" placeholder="Full Name*" class="large" />
+                      <input type="text" name="Field7" placeholder="Website" class="large" />
+                      <input type="text" name="Field4" placeholder="Email*" class="large" />
+                      <input type="text" name="Field108" placeholder="Twitter" class="large" />
+                      <input type="text" name="Field3" placeholder="Talk Title*" class="large" />
+                      <textarea type="text" name="Field110" placeholder="Abstract*" class="large"></textarea>
+
+                      <label class="title">Target topic area</label>
+                        <input type="radio" id="Field111_0" name="Field111" value="Ideation &amp; Planning" tabindex="7" required />
+                        <label for="Field111_0" >Ideation &amp; Planning</label>
+                        <input type="radio" id="Field111_1" name="Field111" value="Design" tabindex="8" required />
+                        <label for="Field111_1" >Design</label>
+                        <input type="radio" id="Field111_2" name="Field111" value="Development" tabindex="9" required />
+                        <label for="Field111_2" >Development</label>
+                        <input type="radio" id="Field111_3" name="Field111" value="Launch" tabindex="10" required />
+                        <label for="Field111_3" >Launch</label>
+
+                        <label class="title">Target audience level</label>
+                        <input type="radio" id="Field112_0" name="Field112" value="Beginner" tabindex="11" required />
+                        <label for="Field112_0" >Beginner</label>
+                        <input type="radio" id="Field112_1" name="Field112" value="Intermediate" tabindex="12" required />
+                        <label for="Field112_1" >Intermediate</label>
+                        <input type="radio" id="Field112_2" name="Field112" value="Advanced" tabindex="13" required />
+                        <label for="Field112_2" >Advanced</label>
+
+                        <label class="title" id="title5" for="Field5">Photo<span id="req_5" class="req">*</span></label>
+                        <div>
+                          <input id="Field5" name="Field5" type="file" class="field file" size="12" tabindex="14" required />
+                        </div>
+                        <br>
+                        <textarea type="text" name="Field6" placeholder="Bio*" class="large"></textarea>
+                        <textarea type="text" name="Field113" placeholder="Speaking experience, and any other relevant information" class="large"></textarea>
+
+                      <button type="submit" class="large button signup alt">Submit</button>
+                    </div>
+                  </form>
+                  <a class="close-reveal-modal">&#215;</a>
+                </div>
             </div>
           </div>
         </div>
