commented out the file upload for now

--- a/index.html
+++ b/index.html
@@ -229,6 +229,10 @@
                       <input type="text" name="Field7" placeholder="Website" class="large" />
                       <input type="text" name="Field4" placeholder="Email*" class="large" />
                       <input type="text" name="Field108" placeholder="Twitter" class="large" />
+
+                      <textarea type="text" name="Field6" placeholder="Bio*" class="large"></textarea>
+                        <textarea type="text" name="Field113" placeholder="Speaking experience, and any other relevant information" class="large"></textarea>
+                      <hr>
                       <input type="text" name="Field3" placeholder="Talk Title*" class="large" />
                       <textarea type="text" name="Field110" placeholder="Abstract*" class="large"></textarea>
 
@@ -249,14 +253,14 @@
                         <label for="Field112_1" >Intermediate</label>
                         <input type="radio" id="Field112_2" name="Field112" value="Advanced" tabindex="13" required />
                         <label for="Field112_2" >Advanced</label>
+                        <hr>
 
-                        <label class="title" id="title5" for="Field5">Photo<span id="req_5" class="req">*</span></label>
+<!--                         <label class="title" id="title5" for="Field5">Photo<span id="req_5" class="req">*</span></label>
                         <div>
                           <input id="Field5" name="Field5" type="file" class="field file" size="12" tabindex="14" required />
-                        </div>
-                        <br>
-                        <textarea type="text" name="Field6" placeholder="Bio*" class="large"></textarea>
-                        <textarea type="text" name="Field113" placeholder="Speaking experience, and any other relevant information" class="large"></textarea>
+                        </div> -->
+                        
+                        
 
                       <button type="submit" class="large button signup alt">Submit</button>
                     </div>
