Edited generic form success

--- a/success.html
+++ b/success.html
@@ -40,7 +40,7 @@
         <img src="img/success.png" class="success" >
         <h3>Success!</h3>
         <div class="large-4 medium-6 medium-centered large-centered columns">
-          <p style="text-align:center;">I'm sure this goes without saying – but check your email often. You'll be the first one we email, once registration opens up.</p>
+          <p style="text-align:center;">I'm sure this goes without saying, but check your email often. You'll be hearing from us.</p>
           <a href="http://levelupcon.com" class="large button signup">Flash Back!</a>
         </div>
       </div>
