Updated AddThisEvent with proper date & more info

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
           <div class="row ">
             <div class="large-4 medium-5 columns dates">
               <a
-                href="http://ate.so/?Qk3QeHA"
+                href="http://ate.so/?5ZVAT4n"
                 title="Add to Calendar"
                 data-track="_gaq.push(['_trackEvent','AddThisEvent','click','ate-calendar'])">
 
@@ -170,6 +170,17 @@
                   </div>
                   <p>9:00 AM - 5:00 PM</p>
                 </div>
+                <span class="_start">08-10-2014 09:00:00</span>
+    		<span class="_end">09-10-2014 17:00:00</span>
+    		<span class="_zonecode">35</span>
+    		<span class="_summary">Summary of the event</span>
+    		<span class="_description">Description of the event</span>
+    		<span class="_location">Location of the event</span>
+    		<span class="_organizer">Organizer</span>
+    		<span class="_organizer_email">Organizer e-mail</span>
+    		<span class="_facebook_event">http://www.facebook.com/events/160427380695693</span>
+    		<span class="_all_day_event">true</span>
+    		<span class="_date_format">DD/MM/YYYY</span>
               </a>
             </div>
 
