--- a/index.html
+++ b/index.html
@@ -2,6 +2,83 @@
 layout: default
 title: Home
 ---
+
+<!--use modernizer to import-->
+<script src="/js/jquery.js"></script>
+<script src="/js/app.js" type="text/javascript" charset="utf-8"></script>
+
+<div> <!--This is the container div for speaker and signup forms (aka modal 2 and 3)-->
+  <!-- Sign up modal form -->
+  <div id="firstModal" class="reveal-modal small" data-reveal class="fixedToTo">
+    <h3><strong>The early bird gets the worm.</strong></h3>
+    <br>
+    <p><strong>Level Up</strong> will be open for registration soon. In the meantime, sign up to stay
+      updated – that way, you'll be the first to know when registration opens.
+    </p>
+    <!-- <p>If you're interested in being a Speaker, you can <a>Apply Here.</a> -->
+
+
+    <!-- ADD IN WHEN SPONSOR PACKET IS DESIGNED
+
+    <br>If you're interested in Sponsoring, <a>Download a Sponsor Kit.</a></p> -->
+
+
+    <form method="post" action="https://madglory.wufoo.com/forms/zmhocgb1i2iamc/#public">
+      <input type="hidden" name="idstamp" id="idstamp" value="UBky4Yeg6JSt/YG4/zJz51sZD5sSAtyGr3+dw6IRBZo=" />
+
+      <div class="row">
+
+        <!-- Do not change the name="BLAH" attributes, they are used by WuFoo -->
+
+        <input type="text" name="Field12" placeholder="Full Name*" class="large" />
+        <input type="text" name="Field3" placeholder="Company Website" class="large" />
+        <input type="text" name="Field4" placeholder="Email*" class="large" />
+        <button type="submit" class="large button signup">Submit</button>
+      </div>
+    </form>
+    <a class="close-reveal-modal">&#215;</a>
+  </div>
+  <!-- /Sign up modal form -->
+
+  <!--beginning of 2nd modal-->
+  <div id="secondModal" class="reveal-modal small" data-reveal>
+    <h3><strong>Sponsor Packet</strong></h3>
+    <br>
+    <p>A sponsor packet for <strong>Level Up</strong> is currently in the works. In the meantime, sign up to let us know that you're interested - when we finalize the details, you'll be the first we contact.</p>
+    <!-- <p>If you're interested in being a Speaker, you can <a>Apply Here.</a> -->
+
+
+    <!-- ADD IN WHEN SPONSOR PACKET IS DESIGNED
+    <br>If you're interested in Sponsoring, <a>Download a Sponsor Kit.</a></p> -->
+
+
+    <form method="post" action="https://madglory.wufoo.com/forms/r1tmn6tm0sgrkom/">
+      <input type="hidden" name="idstamp" id="idstamp" value="HZacEuhoy8vQGEeKm3U+gOB1zyiX4GcLu51tIrDCGBc=" />
+
+      <div class="row">
+
+        <!-- Do not change the name="BLAH" attributes, they are used by WuFoo -->
+        <label>Your Name*
+          <input type="text" name="Field12" placeholder="Your Name*" class="large"></input>
+        </label>
+          <label>Your Email*
+        <input type="text" name="Field4" placeholder="Your Email*" class="large"></input>
+          </label>
+        <label>Company Name
+          <input type="text" name="Field16" placeholder="Company Name" class="large"></input>
+        </label>
+        <label>Website
+          <input type="text" name="Field3" placeholder="Website" class="large"></input>
+        </label>
+        <button type="submit" class="large button signup alt">Submit</button>
+      </div>
+    </form>
+    <a class="close-reveal-modal">&#215;</a>
+  </div>
+  <!--end of 2nd modal-->
+
+  
+
 <div class="full-width intro">
   <div class="down-arrow">
     <img src="/img/down-arrow.png" alt="Down Arrow"/>
@@ -100,104 +177,15 @@ title: Home
               </div>
               <p>9:00 AM - 5:00 PM</p>
             </div>
+            
           </a>
-        </div>
 
+        </div>
         <div class="large-4 medium-5 columns">
-<!--               <a href="#" data-reveal-id="firstModal" class="large button signup">Keep Me Updated</a>
--->              <a href="#" data-reveal-id="secondModal" class="large button signup left alt">Sponsor Packet</a>
-            <div id="secondModal" class="reveal-modal small" data-reveal>
-              <h3><strong>Sponsor Packet</strong></h3>
-              <br>
-              <p>A sponsor packet for <strong>Level Up</strong> is currently in the works. In the meantime, sign up to let us know that you're interested - when we finalize the details, you'll be the first we contact.</p>
-              <!-- <p>If you're interested in being a Speaker, you can <a>Apply Here.</a> -->
-
-
-              <!-- ADD IN WHEN SPONSOR PACKET IS DESIGNED
-              <br>If you're interested in Sponsoring, <a>Download a Sponsor Kit.</a></p> -->
-
-
-              <form method="post" action="https://madglory.wufoo.com/forms/r1tmn6tm0sgrkom/">
-                <input type="hidden" name="idstamp" id="idstamp" value="HZacEuhoy8vQGEeKm3U+gOB1zyiX4GcLu51tIrDCGBc=" />
-
-                <div class="row">
-
-                  <!-- Do not change the name="BLAH" attributes, they are used by WuFoo -->
-
-                  <input type="text" name="Field12" placeholder="Your Name*" class="large" />
-                  <input type="text" name="Field4" placeholder="Your Email*" class="large" />
-                  <input type="text" name="Field16" placeholder="Company Name" class="large" />
-                  <input type="text" name="Field3" placeholder="Website" class="large" />
-                  <button type="submit" class="large button signup alt">Submit</button>
-                </div>
-              </form>
-              <a class="close-reveal-modal">&#215;</a>
-            </div>
-
-            <!-- <a href="#" class="tiny button signup right alt">Apply to Speak</a> -->
-          <a href="#" data-reveal-id="thirdModal" class="large button signup left alt">Speaker RFP</a>
-            <div id="thirdModal" class="reveal-modal small" data-reveal>
-              <h3><strong>Request for Proposal</strong></h3>
-              <br>
-              <p><strong>Level Up</strong> is searching for candidates who have experience with creating and shipping modern software products within our four themes; ideate, design, build, and launch. </p>
-              <hr>
-              <!-- <p>If you're interested in being a Speaker, you can <a>Apply Here.</a> -->
-
-
-              <!-- ADD IN WHEN SPONSOR PACKET IS DESIGNED
-              <br>If you're interested in Sponsoring, <a>Download a Sponsor Kit.</a></p> -->
-
-
-              <form method="post" action="https://madglory.wufoo.com/forms/s49mtcn12bkjrh/">
-                <input type="hidden" name="idstamp" id="idstamp" value="xJfyR61xH6YIjN4LlTj7u8x8+FWg+gwFLFhxz6r9aSg=" />
-
-                <div class="row">
-
-                  <!-- Do not change the name="BLAH" attributes, they are used by WuFoo -->
-
-                  <input type="text" name="Field115" placeholder="Full Name*" class="large" />
-                  <input type="text" name="Field7" placeholder="Website" class="large" />
-                  <input type="text" name="Field4" placeholder="Email*" class="large" />
-                  <input type="text" name="Field108" placeholder="Twitter" class="large" />
-
-                  <textarea type="text" name="Field6" placeholder="Bio*" class="large"></textarea>
-                    <textarea type="text" name="Field113" placeholder="Speaking experience, and any other relevant information" class="large"></textarea>
-                  <hr>
-                  <input type="text" name="Field3" placeholder="Talk Title*" class="large" />
-                  <textarea type="text" name="Field110" placeholder="Abstract*" class="large"></textarea>
-
-                  <label class="title">Target topic area</label>
-                    <input type="radio" id="Field111_0" name="Field111" value="Ideation &amp; Planning" tabindex="7" required />
-                    <label for="Field111_0" >Ideation &amp; Planning</label>
-                    <input type="radio" id="Field111_1" name="Field111" value="Design" tabindex="8" required />
-                    <label for="Field111_1" >Design</label>
-                    <input type="radio" id="Field111_2" name="Field111" value="Development" tabindex="9" required />
-                    <label for="Field111_2" >Development</label>
-                    <input type="radio" id="Field111_3" name="Field111" value="Launch" tabindex="10" required />
-                    <label for="Field111_3" >Launch</label>
-
-                    <label class="title">Target audience level</label>
-                    <input type="radio" id="Field112_0" name="Field112" value="Beginner" tabindex="11" required />
-                    <label for="Field112_0" >Beginner</label>
-                    <input type="radio" id="Field112_1" name="Field112" value="Intermediate" tabindex="12" required />
-                    <label for="Field112_1" >Intermediate</label>
-                    <input type="radio" id="Field112_2" name="Field112" value="Advanced" tabindex="13" required />
-                    <label for="Field112_2" >Advanced</label>
-                    <hr>
-
-<!--                         <label class="title" id="title5" for="Field5">Photo<span id="req_5" class="req">*</span></label>
-                    <div>
-                      <input id="Field5" name="Field5" type="file" class="field file" size="12" tabindex="14" required />
-                    </div> -->
-
-
-
-                  <button type="submit" class="large button signup alt">Submit</button>
-                </div>
-              </form>
-              <a class="close-reveal-modal">&#215;</a>
-            </div>
+          <a href="request-for-proposal" class="large button signup left alt">Speaker RFP</a>
+          <a href="#" data-reveal-id="secondModal" class="large button signup left alt">Sponsor Packet</a>
         </div>
+        
       </div>
     </div>
   </div>
@@ -228,35 +216,3 @@ title: Home
     </div>
   </div>
 </div>
-
-<!-- Sign up modal form -->
-<div id="firstModal" class="reveal-modal small" data-reveal>
-  <h3><strong>The early bird gets the worm.</strong></h3>
-  <br>
-  <p><strong>Level Up</strong> will be open for registration soon. In the meantime, sign up to stay
-    updated – that way, you'll be the first to know when registration opens.
-  </p>
-  <!-- <p>If you're interested in being a Speaker, you can <a>Apply Here.</a> -->
-
-
-  <!-- ADD IN WHEN SPONSOR PACKET IS DESIGNED
-
-  <br>If you're interested in Sponsoring, <a>Download a Sponsor Kit.</a></p> -->
-
-
-  <form method="post" action="https://madglory.wufoo.com/forms/zmhocgb1i2iamc/#public">
-    <input type="hidden" name="idstamp" id="idstamp" value="UBky4Yeg6JSt/YG4/zJz51sZD5sSAtyGr3+dw6IRBZo=" />
-
-    <div class="row">
-
-      <!-- Do not change the name="BLAH" attributes, they are used by WuFoo -->
-
-      <input type="text" name="Field12" placeholder="Full Name*" class="large" />
-      <input type="text" name="Field3" placeholder="Company Website" class="large" />
-      <input type="text" name="Field4" placeholder="Email*" class="large" />
-      <button type="submit" class="large button signup">Submit</button>
-    </div>
-  </form>
-  <a class="close-reveal-modal">&#215;</a>
-</div>
-<!-- /Sign up modal form -->
