--- a/success/index.html
+++ b/success/index.html
@@ -2,13 +2,18 @@
 layout: minimal
 title: Success
 ---
-<div class="row">
-  <div class="large-12 medium-12 small-12 columns">
-    <img src="/img/success.png" class="success" >
-    <h3>Success!</h3>
-    <div class="large-4 medium-6 medium-centered large-centered columns">
-      <p style="text-align:center;">I'm sure this goes without saying, but check your email often. You'll be hearing from us.</p>
-      <a href="http://levelupcon.com" class="large button signup">Flash Back!</a>
+
+<div class="fullBackground fillHeight">
+    <div class="headerImage"></div>
+
+    <div class="row">
+      <div class="large-12 medium-12 small-12 columns">
+        <img src="/img/success.png" class="success" >
+        <h3>Success!</h3>
+        <div class="large-4 medium-6 medium-centered large-centered columns">
+          <p style="text-align:center;">I'm sure this goes without saying, but check your email often. You'll be hearing from us.</p>
+          <a href="http://levelupcon.com" class="large button signup">Flash Back!</a>
+        </div>
+      </div>
     </div>
-  </div>
 </div>
