--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@ title: Home
 <div class="full-width subfooter">
   <div class="row">
     <div class="large-12 columns">
-      <p>Level Up Conference in association with <a href="http://madglory.com" target="_blank">MadGlory</a>  |  <a href="http://confcodeofconduct.com">Code of Conduct</a></p>
+      <p>Level Up Conference in association with <a href="http://madglory.com" target="_blank">MadGlory</a>  |  <a href="/code-of-conduct">Code of Conduct</a></p>
 
     </div>
   </div>
