1 speaker and 2 sponsors

--- a/index.html
+++ b/index.html
@@ -81,7 +81,11 @@ title: Home
   <div class="row">
     <div class="large-12 columns">
       <h2>Speakers</h2>
-      <h4>We'll let you get to know these four before releasing the next bunch.<br>More to come!</h4>
+<!--       <h4>We'll let you get to know these four before releasing the next bunch.<br>More to come!</h4>
+ -->      
+        <a href="request-for-proposal" class="medium button button-center signup alt">Speaker RFP</a>
+      
+      
       <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-4">
         <li class="center">
           <figure class="speaker">
@@ -144,6 +148,22 @@ title: Home
             <figcaption class="speaker-title">Product Designer at Quora</figcation>
           </figure>
         </li>
+        <br>
+        <li class="center">
+          <figure class="speaker">
+            <div class="avatar">
+              <div class="speaker-links">
+                <a href="https://twitter.com/mynameispj" class="twitter-icon" target="_blank">@mynameispj</a>
+                <img src="/img/lu-icon.png" class="lu-icon">
+                <a href="http://www.pjmccormick.com" class="link-icon" target="_blank">Website</a>
+            </div>
+              <img src="/img/pj-mccormick.jpg" alt="PJ Mccormick">
+            </div>
+            <br>
+            <figcaption>PJ Mccormick</figcaption>
+            <figcaption class="speaker-title">UX Design Lead at Amazon</figcation>
+          </figure>
+        </li>
       </ul>
     </div>
   </div>
@@ -159,41 +179,82 @@ title: Home
     </div>
   </div>
 
-  <!-- <div class="row">
+  <div class="row">
     <div class="large-12 columns">
       <h2>Sponsors</h2>
-      <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
+      <a href="#" data-reveal-id="secondModal" class="medium button button-center signup alt">Sponsor Packet</a>
+      <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-4">
+
         <li class="center">
           <figure class="sponsor">
-            <div class="sponsor-links">
-              <a href="http://twitter.com"></a>
-              <a href="http://url.com"></a>
+            <div class="avatar">
+              <div class="sponsor-links">
+                <a href="http://twitter.com/mandrillapp" class="twitter-icon" target="_blank">@mandrillapp</a>
+                <img src="/img/lu-icon.png" class="lu-icon">
+                <a href="http://mandrill.com" class="link-icon" target="_blank">Website</a>
+              </div>
+              <img src="/img/mandrill-logo.png" alt="Mandrill">
             </div>
-            <img src="/img/ian-landsman.png" alt="">
-            <figcaption>This is a caption</figcaption>
           </figure>
         </li>
+
         <li class="center">
-          <figure class="avatar">
-            <img src="/img/ian-landsman.png" alt="">
-            <figcaption>This is a caption</figcaption>
+          <figure class="sponsor">
+            <div class="avatar">
+              <div class="sponsor-links">
+                <a href="https://twitter.com/WarnerBrosEnt" class="twitter-icon" target="_blank">@WarnerBrosEnt</a>
+                <img src="/img/lu-icon.png" class="lu-icon">
+                <a href="http://www.warnerbros.com" class="link-icon" target="_blank">Website</a>
+              </div>
+              <img src="/img/wb-logo.png" alt="Warner Brothers Entertainment">
+            </div>
           </figure>
         </li>
+
         <li class="center">
-          <figure class="avatar">
-            <img src="/img/ian-landsman.png" alt="">
-            <figcaption>This is a caption</figcaption>
+          <figure class="sponsor">
+            <div class="avatar">
+              <div class="sponsor-links">
+                <a href="https://twitter.com/turbine" class="twitter-icon" target="_blank">@turbine</a>
+                <img src="/img/lu-icon.png" class="lu-icon">
+                <a href="http://www.turbine.com" class="link-icon" target="_blank">Website</a>
+              </div>
+              <img src="/img/turbine-logo.png" alt="Turbine">
+            </div>
           </figure>
         </li>
+
         <li class="center">
-          <figure class="avatar">
-            <img src="/img/ian-landsman.png" alt="">
-            <figcaption>This is a caption</figcaption>
+          <figure class="sponsor">
+            <div class="avatar">
+              <div class="sponsor-links">
+                <a href="https://twitter.com/besnappy" class="twitter-icon" target="_blank">@besnappy</a>
+                <img src="/img/lu-icon.png" class="lu-icon">
+                <a href="http://besnappy.com" class="link-icon" target="_blank">Website</a>
+              </div>
+              <img src="/img/besnappy-logo.png" alt="Snappy">
+            </div>
           </figure>
         </li>
+
+        <li class="center">
+          <figure class="sponsor">
+            <div class="avatar">
+              <div class="sponsor-links">
+                <a href="https://twitter.com/Noom" class="twitter-icon" target="_blank">@Noom</a>
+                <img src="/img/lu-icon.png" class="lu-icon">
+                <a href="http://noom.com" class="link-icon" target="_blank">Website</a>
+              </div>
+              <img src="/img/noom-logo.png" alt="Snappy">
+            </div>
+          </figure>
+        </li>
+
       </ul>
     </div>
-  </div> -->
+  </div>
+<br>
+<hr>
 
   <div class="row">
     <div class="large-12 columns">
@@ -207,11 +268,6 @@ title: Home
         skills you can show off at home.
       </p>
       <p class="lead"><strong>Tickets are extremely limited.</strong></p>
-      <!-- <p class="lead">
-        It's a unique event happening in famous resort town located only 3 hours
-        from both New York and Boston. LevelUp will be an intimate
-        affair and so tickets are extremely limited.
-      </p> -->
     </div>
   </div>
 </div>
